<resources>
    <string name="app_name">NeoStore</string>
    <string name="login_header">NeoSTORE</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="new_account">DONT HAVE AN ACCOUNT?</string>
    <string name="register">Register</string>

    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="phone_no">Phone Number</string>
    <string name="register_button">REGISTER</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="agree">I agree the</string>
    <string name="terms_condition">Terms &amp; Conditions</string>

    <string name="my_cart">My Cart</string>
    <string name="tables">Tables</string>
    <string name="sofas">Sofas</string>
    <string name="chairs">Chairs</string>
    <string name="cupboards">Cupboards</string>
    <string name="my_account">My Account</string>
    <string name="my_address">My Address</string>
    <string name="store_locator">Store Locator</string>
    <string name="my_orders">My Orders</string>
    <string name="logout">Logout</string>

    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_address">Add Address</string>
    <string name="address">ADDRESS</string>
    <string name="city">CITY</string>
    <string name="state">STATE</string>
    <string name="zip_code">ZIP CODE</string>
    <string name="country">COUNTRY</string>
    <string name="save_address_button">SAVE ADDRESS</string>

    <string name="buy_now">BUY NOW</string>
    <string name="order_now">ORDER NOW</string>
    <string name="rate">RATE</string>
    <string name="rate_now">RATE NOW</string>
    <string name="descrip_text">DESCRIPTION</string>
    <string name="description">DESCRIPTION</string>

    <string name="choose">Share with</string>

    <string name="shipping_address">Shipping Address</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="enter_qty">Enter Qty</string>
    <string name="submit">SUBMIT</string>

    <string name="order_id">Order ID:</string>
    <string name="order_date">Order Date:</string>

    <string name="total">TOTAL</string>

    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="resetpassword">Reset Password</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="editprofile">Edit Profile</string>
    <string name="dob">DOB</string>
</resources>
