<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRed"
    android:orientation="vertical"
    tools:context="com.example.webwerks.neostore.view.login.RegisterActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/registerheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/Header"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:inputType="textPersonName"
                android:hint="@string/firstname"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                style="@style/EditText_Field"
                android:layout_below="@+id/registerheader"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/firstname"
                android:layout_below="@+id/firstname"
                android:layout_marginTop="10dp"
                android:inputType="textPersonName"
                android:hint="@string/lastname"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                style="@style/EditText_Field" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/lastname"
                android:layout_below="@+id/lastname"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                style="@style/EditText_Field"/>

            <EditText
                android:id="@+id/pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/email"
                android:layout_below="@+id/email"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:drawableLeft="@drawable/ic_lock_open_black_24dp"
                style="@style/EditText_Field"/>

            <EditText
                android:id="@+id/confirmpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/pass"
                android:layout_below="@+id/pass"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                style="@style/EditText_Field"/>

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="13dp"
                android:layout_alignStart="@+id/confirmpass"
                android:layout_below="@id/confirmpass"
                android:id="@+id/linearLayout">
                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/gender"
                    style="@style/txtNewAccount_Style"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:weightSum="2"
                    android:layout_marginLeft="20dp">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male"
                        android:textAlignment="center"
                        android:button="@drawable/radiobutton_state"
                        style="@style/txtNewAccount_Style"/>

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:text="@string/female"
                        android:textAlignment="center"
                        android:button="@drawable/radiobutton_state"
                        style="@style/txtNewAccount_Style"/>

                </RadioGroup>
                </LinearLayout>

            <EditText
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/linearLayout"
                android:layout_below="@+id/linearLayout"
                android:layout_marginTop="13dp"
                android:inputType="number"
                android:maxLength="10"
                android:hint="@string/phone_no"
                android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                style="@style/EditText_Field"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone"
                android:id="@+id/linearLayout1"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree"
                    android:paddingLeft="10dp"
                    android:button="@drawable/checkbox_state"
                    style="@style/txtNewAccount_Style"/>
                <TextView
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/terms_condition"
                    style="@style/txtNewAccount_Style"/>
            </LinearLayout>


            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button"
                style="@style/Button"
                android:layout_marginTop="13dp"
                android:layout_below="@id/linearLayout1"
                android:layout_alignStart="@+id/phone" />




        </RelativeLayout>
    </ScrollView>

</LinearLayout>
