<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRed"
    android:fitsSystemWindows="true"
    tools:context="com.example.webwerks.neostore.view.login.ResetPasswordActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/tbResetPassword"/>

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hundred"
        android:layout_alignParentTop="true"
        android:layout_below="@id/tbResetPassword"
        android:layout_centerHorizontal="true"
        style="@style/Header"/>

    <EditText
        android:id="@+id/edtCurrentPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:inputType="textPassword"
        android:hint="@string/current_password"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        style="@style/EditText_Field"/>

    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edtCurrentPassword"
        android:layout_below="@+id/edtCurrentPassword"
        android:layout_marginTop="17dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock_open_black_24dp"
        style="@style/EditText_Field"/>

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edtCurrentPassword"
        android:layout_below="@+id/edtNewPassword"
        android:layout_marginTop="17dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        style="@style/EditText_Field"/>

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtConfirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/thirty"
        android:text="@string/reset_password"
        style="@style/Button"/>


</RelativeLayout>
